[metadata]
name = tea_log
description = Parser and predictor for tea log files
long_description = file: README.md
author = Prashanth Kumar
author_email = prasxanth.kumar@gmail.com
version = 0.1
keywords =
  parse
  analyze
  Hy
classifiers =
  Topic :: Software Development
  Development Status :: 3 - Alpha
  Intended Audience :: Software/Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license = BSD 3-Clause License
license_files =
  LICENSE

[options]
python_requires = >= 3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    hy == 0.26
    hyrule == 0.3.0

[options.package_data]
tea_log = *.hy
